--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ body {
   line-height: 15px;
   font-size: 16px;
   padding: 31px 0;
+  position: relative;
 }
 
 .header .top-nav {
@@ -85,8 +86,32 @@ body {
   .header .top-nav .menu {
     display: none;
   }
+  .header .top-nav .menu .menu-item {
+    margin: 0;
+  }
   .header .top-nav .toggel {
     display: block;
+  }
+  .header .top-nav .toggel-menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    position: absolute;
+    top: 113px;
+    background: #f4e1e2;
+  }
+  .header .top-nav .toggel-menu li a {
+    padding: 20px 0;
+    -webkit-transition: color .3s ease;
+    transition: color .3s ease;
+  }
+  .header .top-nav .toggel-menu li a:hover {
+    background: #fdeaeb;
   }
 }
 
