--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,12 @@ body {
   background: #a285a9;
   padding: 18px 38px;
   border-radius: 50px;
+  -webkit-transition: color .3s ease;
+  transition: color .3s ease;
+}
+
+.header .top-nav .top-nav-button:hover {
+  background: #97769e;
 }
 
 .header .top-nav .toggel {
@@ -171,6 +177,12 @@ body {
   font-weight: 700;
   background: #a285a9;
   line-height: 20px;
+  -webkit-transition: color .3s ease;
+  transition: color .3s ease;
+}
+
+.button-centr-container .button-centr:hover {
+  background: #97769e;
 }
 
 @media screen and (max-width: 611px) {
@@ -227,6 +239,12 @@ body {
   border: 1px solid #635c73;
   border-radius: 5px;
   padding: 10px 20px;
+  -webkit-transition: color .3s ease;
+  transition: color .3s ease;
+}
+
+.revolutionary .revolutionary-button-container:hover {
+  background: #f4e1e2;
 }
 
 .revolutionary .revolutionary-button-container .revolutionary-button {
@@ -441,16 +459,34 @@ body {
 .social .social-container .social-buttons .social-button .github {
   background: #f3e1e2;
   color: #000000;
+  -webkit-transition: color .3s ease;
+  transition: color .3s ease;
+}
+
+.social .social-container .social-buttons .social-button .github:hover {
+  background: #e4bdbf;
 }
 
 .social .social-container .social-buttons .social-button .twitter {
   background: #4fa3c6;
   color: #ffffff;
+  -webkit-transition: color .3s ease;
+  transition: color .3s ease;
+}
+
+.social .social-container .social-buttons .social-button .twitter:hover {
+  background: #3789ab;
 }
 
 .social .social-container .social-buttons .social-button .facebook {
   background: #4e5184;
   color: #ffffff;
+  -webkit-transition: color .3s ease;
+  transition: color .3s ease;
+}
+
+.social .social-container .social-buttons .social-button .facebook:hover {
+  background: #3b3d64;
 }
 
 .social .social-container .social-buttons .after-btn-text {
@@ -568,6 +604,15 @@ body {
   width: 20%;
   background: #937382;
   opacity: 0.7;
+  -webkit-transition: -webkit-transform .3s ease;
+  transition: -webkit-transform .3s ease;
+  transition: transform .3s ease;
+  transition: transform .3s ease, -webkit-transform .3s ease;
+}
+
+.about-fork .about-fork-price-cards-2 .pricing-price-card:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .about-fork .about-fork-price-cards-2 .pricing-price-card .pricing-price-card-title {
@@ -629,6 +674,12 @@ body {
   border-radius: 50px;
   padding: 15px 25px;
   margin-bottom: 20px;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+}
+
+.about-fork .about-fork-price-cards-2 .pricing-price-card .price-btn:hover {
+  background: rgba(132, 97, 110, 0.9);
 }
 
 .about-fork .pricing-text {
@@ -661,6 +712,14 @@ body {
   .about-fork .about-fork-price-cards-2 .pricing-price-card {
     width: 50%;
     margin-bottom: 50px;
+    -webkit-transition: -webkit-transform .3s ease;
+    transition: -webkit-transform .3s ease;
+    transition: transform .3s ease;
+    transition: transform .3s ease, -webkit-transform .3s ease;
+  }
+  .about-fork .about-fork-price-cards-2 .pricing-price-card:hover {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
   }
   .about-fork .about-fork-price-cards-2 .pricing-price-card .price-line {
     height: 5px;
@@ -721,6 +780,12 @@ body {
   padding: 18px 38px;
   border-radius: 50px;
   cursor: pointer;
+  -webkit-transition: color .3s ease;
+  transition: color .3s ease;
+}
+
+.subscription-form input[type="submit"]:hover {
+  background: #97769e;
 }
 
 .subscription-form input[type="submit"]:focus {
